Addes touch swipe on hero component for mobile, adds content, style improvements, fixes tabs on smaller screens

--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -29,39 +29,36 @@
             position: absolute;
             bottom: 50px;
             text-align: center;
-            text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+            text-shadow: 0px 2px 4px rgba(0, 0, 0, 1);
             h1,
             h2,
             h3 {
                 line-height: 0.9;
-                background-color: rgba(0, 0, 0, 0.09);
                 padding: 2px 15px;
                 border-radius: 10px;
-                width: max-content;
-                margin: 0 auto;
             }
             h1 {
-                font-size: 3.5rem;
+                font-size: clamp(1rem, 3.5rem, 80vw);
             }
 
             h2 {
-                font-size: 2.5rem;
+                font-size: clamp(1rem, 2.5rem, 80vw);
                 font-weight: 400;
             }
             h3 {
-                font-size: 2.3rem;
+                font-size: clamp(1rem, 2.3rem, 80vw);
                 font-weight: 400;
             }
 
             @media (max-width: 768px) {
                 h1 {
-                    font-size: 2.5rem;
+                    font-size: clamp(1rem, 2.5rem, 80vw);
                 }
                 h2 {
-                    font-size: 2rem;
+                    font-size: clamp(1rem, 2rem, 70vw);
                 }
-                h2 {
-                    font-size: 1rem;
+                h3 {
+                    font-size: clamp(1rem, 1.8rem, 65vw);
                 }
             }
         }
