--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -1,4 +1,4 @@
-.tabTitles {
+ul.tabs {
     list-style-type: none;
     display: inline-flex;
     justify-content: space-between;
@@ -10,7 +10,9 @@
     margin: 20px 0;
     margin-bottom: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    li {
+    overflow-x: auto; // for small screens
+    -webkit-overflow-scrolling: touch;
+    li.tab {
         flex: 0 0 auto;
         display: flex;
         align-items: center;
@@ -18,6 +20,7 @@
         color: inherit;
         text-decoration: none;
         padding: 0.5rem;
+        margin-bottom: 0;
         border-radius: 10px;
         cursor: pointer;
         &:hover {
