--- a/src/ui.module.scss
+++ b/src/ui.module.scss
@@ -75,6 +75,14 @@
             }
         }
     }
+    ul {
+        margin: 10px 0;
+        padding: 0;
+        li {
+            list-style: none;
+            margin-bottom: 10px;
+        }
+    }
     form {
         margin-top: 20px;
         label {
